tests/reference/asr-continue_compilation_ff_1-c2d5950.stderr
syntax error: Newline is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:93:14
   |
93 |       I == 10
   |              ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:94:14
   |
94 |       J = 20..5
   |              ^^ 

syntax error: Token 'i' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:95:32
   |
95 |       PRINT *, "Value of I is" I
   |                                ^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
  --> tests/errors/continue_compilation_ff_1.f:96:7
   |
96 |       CHARACTER*10 STR = 'Hello  '
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Token 'format' (of type 'identifier') is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:97:18
   |
97 |       WRITE(*,10 FORMAT(A))
   |                  ^^^^^^ 

syntax error: Token '*' is unexpected here
  --> tests/errors/continue_compilation_ff_1.f:98:16
   |
98 |       A = B +  * C
   |                ^ 

syntax error: Token '.5' (of type 'real') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:101:20
    |
101 |       REAL X Y Z 10.5
    |                    ^^ 

syntax error: Newline is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:102:27
    |
102 |       COMPLEX C = (1.0,2.0
    |                           ^ 

syntax error: Token '=' is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:103:11
    |
103 |       I === 10
    |           ^ 

syntax error: Token 'e' (of type 'identifier') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:104:14
    |
104 |       J = .20E
    |              ^ 

syntax error: Token '.45' (of type 'real') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:105:22
    |
105 |       REAL*8 A = 1.23.45
    |                      ^^^ 

syntax error: Token 'thenprint' (of type 'identifier') is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:118:20
    |
118 |       IF I .EQ. 10 THEN PRINT *, "Ten"
    |                    ^^^^^^^^^^ 

syntax error: Newline is unexpected here
   --> tests/errors/continue_compilation_ff_1.f:119:23
    |
119 |       CALL FUNC( 5, 6,
    |                       ^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_ff_1.f:11:7 - 13:38
   |
11 |          SUBROUTINE faulty_subroutine(a, b, c)
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
13 |          END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'b' not defined
  --> tests/errors/continue_compilation_ff_1.f:11:7 - 13:38
   |
11 |          SUBROUTINE faulty_subroutine(a, b, c)
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
13 |          END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_ff_1.f:11:7 - 13:38
   |
11 |          SUBROUTINE faulty_subroutine(a, b, c)
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
13 |          END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

warning: This equivalence statement is not implemented yet, for now we will ignore it
   --> tests/errors/continue_compilation_ff_1.f:108:7
    |
108 |       EQUIVALENCE (X Y)
    |       ^^^^^^^^^^^^^^^^^ ignored for now

semantic error: Variable 'integerklm' is not declared
  --> tests/errors/continue_compilation_ff_1.f:99:7
   |
99 |       INTEGER K L M = 5
   |       ^^^^^^^^^^^^^ 'integerklm' is undeclared

semantic error: Variable 'n5' is not declared
   --> tests/errors/continue_compilation_ff_1.f:100:15
    |
100 |       READ *, N 5
    |               ^^^ 'n5' is undeclared
